--- a/fullstack-todolist/pom.xml
+++ b/fullstack-todolist/pom.xml
@@ -15,6 +15,10 @@
     <description>fullstack-todolist</description>
     <properties>
 <!--        <java.version>19</java.version>-->
+        <psql.url>jdbc:postgresql://localhost:5432/postgres</psql.url>
+        <psql.user>postgres</psql.user>
+        <psql.password>myfirstproject</psql.password>
+
     </properties>
     <dependencies>
         <dependency>
@@ -32,6 +36,31 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-simple</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.apache.tomcat</groupId>
+                    <artifactId>tomcat-jdbc</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -48,6 +77,17 @@
                     </excludes>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.flywaydb</groupId>
+                <artifactId>flyway-maven-plugin</artifactId>
+                <version>6.1.3</version>
+                <configuration>
+                    <url>${psql.url}</url>
+                    <user>${psql.user}</user>
+                    <password>${psql.password}</password>
+                </configuration>
+            </plugin>
+
         </plugins>
     </build>
 
