--- a/fullstack-todolist/pom.xml
+++ b/fullstack-todolist/pom.xml
@@ -60,6 +60,11 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>org.modelmapper</groupId>
+            <artifactId>modelmapper</artifactId>
+            <version>3.1.0</version>
+        </dependency>
 
     </dependencies>
 
